--- a/MySql/MySql.csproj
+++ b/MySql/MySql.csproj
@@ -36,7 +36,7 @@
 
     <ItemGroup>
       <PackageReference Include="LightestNight.System.EventSourcing.SqlStreamStore.MySql" Version="1.5.0-alpha0017" />
-      <PackageReference Include="LightestNight.System.EventSourcing.SqlStreamStore.Subscriptions" Version="1.1.0" />
+      <PackageReference Include="LightestNight.System.EventSourcing.SqlStreamStore.Subscriptions" Version="1.2.0-alpha0001" />
     </ItemGroup>
 
     <ItemGroup>
