--- a/MySql/MySql.csproj
+++ b/MySql/MySql.csproj
@@ -35,8 +35,8 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="LightestNight.System.EventSourcing.SqlStreamStore.MySql" Version="1.5.0-alpha0017" />
-      <PackageReference Include="LightestNight.System.EventSourcing.SqlStreamStore.Subscriptions" Version="1.2.0-alpha0001" />
+      <PackageReference Include="LightestNight.System.EventSourcing.SqlStreamStore.MySql" Version="1.5.0-alpha0018" />
+      <PackageReference Include="LightestNight.System.EventSourcing.SqlStreamStore.Subscriptions" Version="1.2.0" />
     </ItemGroup>
 
     <ItemGroup>
